--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,22 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: 'Roboto Mono';
+  --max-width: 75rem;
+  --font: 'Roboto Mono';
+  --font-size: 1rem;
+  --padding-container: 0 1rem;
+  --yellow: yellow;
+  --light-blue: rgb(136, 136, 255);
+}
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html[data-theme="dark"] {
+  --text-color: #fff;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
+  --background-color: #181818;
+}
+
+html[data-theme="light"] {
+  --text-color: #181818;
+
+  --background-color: #fff;
 }
 
 * {
@@ -23,23 +25,90 @@
   margin: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
+  min-width: 20rem;
+  line-height: 1;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font);
+  font-weight: 400;
+  font-size: var(--font-size);
+  color: var(--text-color);
+  background: var(--background-color);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: inherit;
+  font-size: inherit;
+}
+
+input,
+button {
+  line-height: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  color: inherit;
+  background-color: transparent;
+  outline: none;
+}
+
+input {
+  padding: 0;
+}
+
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
+}
+
+.page {
+  max-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.main {
+  flex: 1 1 auto;
+}
+
+[class*="__container"] {
+  max-width: var(--max-width);
+  padding: var(--padding-container);
+  margin: 0 auto;
 }
