--- a/components/profile/profile.module.css
+++ b/components/profile/profile.module.css
@@ -1,3 +1,11 @@
 .profile {
   display: flex;
 }
+
+.profile__button{
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 0;
+  border: 0;
+  border-radius: 50%;
+}
