--- a/components/profile-menu/profile-menu.module.css
+++ b/components/profile-menu/profile-menu.module.css
@@ -48,9 +48,18 @@
 }
 
 .menu__item a {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   transition: color .3s ease-in-out;
 }
 
 .menu__item a:hover {
   color: #dec6c6;
+}
+
+.menu__item a svg {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
 }
