--- a/app/auth/auth.module.css
+++ b/app/auth/auth.module.css
@@ -1,20 +1,51 @@
 .auth__wrapper {
   width: 100%;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 100px);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.form {
+.auth__form {
   display: inline-block;
   max-width: 450px;
-  padding: 20px;
+  padding: 30px;
   border: 1px solid #dd8717;
   border-radius: 7px;
   transition: 0.3s;
   text-align: center;
   vertical-align: middle;
+}
+
+.auth__title {  
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.form__label {
+  display: block;
+  margin-bottom: 2.125rem;
+}
+
+.form__label__text {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+}
+
+.form__label__input {
+  font-size: 1.375rem;
+  width: 100%;
+  height: 3.75rem;
+  border: 0.125rem solid rgba(177, 177, 177, 0.15);
+  border-radius: 0.25rem;
+  background-color: transparent;
+}
+
+.form__label__input::placeholder {
+  font-size: 1.375rem;
 }
 
 .form__or {
@@ -48,4 +79,11 @@
 
 .form__reg a {
   color: #dd8717;
+}
+
+.form__label__error {
+  display: inline-block;
+  margin: 7px 0;
+  color: red;
+  font-size: 12px;
 }
