--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,32 +1,31 @@
-/* roboto-300 - cyrillic_latin */
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 300;
-  src: url('../../public/fonts/roboto-v30-cyrillic_latin-300.woff2') format('woff2');
+  font-weight: 700;
+  src: url('../../public/fonts/Poppins-SemiBold.woff') format('woff');
 }
-/* roboto-regular - cyrillic_latin */
+
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../../public/fonts/Poppins-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url('../../public/fonts/roboto-v30-cyrillic_latin-regular.woff2') format('woff2');
+  src: url('../../public/fonts/Poppins-Regular.woff') format('woff');
 }
-/* roboto-500 - cyrillic_latin */
+
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  src: url('../../public/fonts/roboto-v30-cyrillic_latin-500.woff2') format('woff2');
-}
-/* lato-regular - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../../public/fonts/lato-v24-latin-regular.woff2') format('woff2');
+  src: url('../../public/fonts/Poppins-Medium.woff') format('woff');
 }
