--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -1,25 +1,23 @@
 :root {
-  --max-width: 75rem;
-  --font: 'Roboto Mono';
-  --font-size: 1rem;
+  --max-width: 102rem;
+  --font: 'Poppins, sans-serif';
+  --font-size: 2rem;
   --padding-container: 0 1rem;
   --accent: #FDD49E;
   --accent-second: #FCA7B5;
   --red: #EB5757;
   --white: #FFF;
   --black: #000;
-  --yellow: yellow;
-  --light-blue: rgb(136, 136, 255);
 }
 
 html[data-theme="dark"] {
-  --text-color: #fff;
+  --text-color: var(--white);
 
-  --background-color: #181818;
+  --background-color: var(--black);
 }
 
 html[data-theme="light"] {
-  --text-color: #181818;
+  --text-color: var(--black);
 
-  --background-color: #fff;
+  --background-color: var(--white);
 }
