--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,11 +1,20 @@
 .header {
   position: relative;
   width: 100%;
-  box-shadow: 0rem 0.3125rem 1.375rem 0rem rgba(0, 0, 0, 0.25);
+  padding: 1rem 0;
+  border-radius: 0rem 0rem 5rem 5rem;
+  background-color: var(--accent-second);
 }
 
 .header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__icons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.8125rem;
 }
