--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --max-width: 102rem;
-  --font: 'Poppins, sans-serif';
+  --font: 'Poppins';
   --font-size: 2rem;
   --padding-container: 0 1rem;
   --accent: #FDD49E;
