--- a/app/auth/auth.module.css
+++ b/app/auth/auth.module.css
@@ -1,5 +1,5 @@
 .auth {
-  margin-bottom: 6.25rem;
+  margin: 6.25rem 0;
   font-size: 1.25rem;
 }
 
@@ -45,7 +45,7 @@
   height: 3.75rem;
   padding: 0.3125rem 0.625rem;
   font-size: 1.375rem;
-  border: 0.125rem solid var(--accent);
+  border: 0.125rem solid var(--accent-second);
   border-radius: 0.25rem;
   background-color: transparent;
 }
@@ -106,7 +106,7 @@
 }
 
 .form__reg a {
-  color: var(--accent);
+  color: var(--accent-second);
   transition: color .3s ease-in-out;
 }
 
