--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -4,7 +4,7 @@ body {
   font-weight: 400;
   font-size: var(--font-size);
   color: var(--white);
-  background-color: var(--accent-second);
+  background-color: var(--accent);
 }
 
 .visually-hidden {
