--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -3,7 +3,8 @@
   width: 100%;
   padding: 1rem 0;
   border-radius: 0rem 0rem 5rem 5rem;
-  background-color: var(--accent-second);
+  background-color: var(--accent);
+  font-size: 2rem;
 }
 
 .header__container {
@@ -12,9 +13,31 @@
   justify-content: space-between;
 }
 
-.header__icons{
+.header__icons {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2.8125rem;
+}
+
+@media (max-width: 1440px) {
+  .header {
+    font-size: 1.5rem;
+  }
+  .header__icons {
+    gap: 1.5rem;
+  }
+}
+
+@media (max-width: 744px) {
+  .header {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 360px) {
+  .header {
+    font-size: 1.5rem;
+  }
 }
