--- a/components/profile-menu/profile-menu.module.css
+++ b/components/profile-menu/profile-menu.module.css
@@ -1,7 +1,7 @@
 .profile__menu {
   position: absolute;
-  top: calc(100% + 0.3125rem);
-  right: 7rem;
+  top: calc(100% + 1.5rem);
+  right: 6.5rem;
   padding: 1.25rem;
   border: 0.0625rem solid var(--white);
   border-radius: 0.4375rem;
@@ -35,7 +35,7 @@
 
 .profile__menu::after {
   top: -1.1875rem;
-  border-bottom: 0.625rem solid var(--accent-second);
+  border-bottom: 0.625rem solid var(--accent);
 }
 
 .menu__item:not(:last-child) {
@@ -51,7 +51,7 @@
 }
 
 .menu__item a:hover {
-  color: var(--accent);
+  color: var(--accent-second);
 }
 
 .menu__item a svg {
