--- a/components/toggle-language/toggle-language.module.css
+++ b/components/toggle-language/toggle-language.module.css
@@ -2,8 +2,8 @@
   --width: 10.3125rem;
   --height: 4rem;
   --offset: 1.375rem;
-  --first-color: var(--accent-second);
-  --second-color: var(--accent);
+  --first-color: var(--accent);
+  --second-color: var(--accent-second);
   --text-color: var(--white);
   --text-size: 2rem;
   --duration: 0.3s cubic-bezier(0.47, 1.64, 0.41, 0.8),
@@ -61,4 +61,22 @@
   border-radius: 43%;
   transition: var(--duration);
   z-index: 0;
+}
+
+@media (max-width: 1440px) {
+  .checkbox {
+    --height: 3.25rem;
+    --width: 9.125rem;
+    --text-size: 1.5rem;
+    --offset: 1.5rem;
+  }
+  .checkbox__div::before {
+    width: 4.875rem;
+    height: 3.05rem;
+    left: -0.3125rem;
+  }
+  .checkbox__input:hover:checked ~ .checkbox__div::before {
+    width: 4.875rem;
+    height: 3.05rem;
+  }
 }
