--- a/components/payment/payment.module.css
+++ b/components/payment/payment.module.css
@@ -1,11 +1,11 @@
-.payment {
+.payment__content {
   display: flex;
   align-items: center;
   gap: 2.5rem;
 }
 
 @media (max-width: 46.5rem) {
-  .payment {
+  .payment__content {
     flex-direction: column;
     gap: 1rem;
   }
