--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-display: swap;
-  font-family: 'Poppins';
+  font-family: 'PoppinsS';
   font-style: normal;
   font-weight: 700;
   src: url('../../public/fonts/Poppins-SemiBold.woff') format('woff');
@@ -8,7 +8,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: 'Poppins';
+  font-family: 'PoppinsS';
   font-style: normal;
   font-weight: 600;
   src: url('../../public/fonts/Poppins-Bold.woff') format('woff');
@@ -16,7 +16,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: 'Poppins';
+  font-family: 'PoppinsS';
   font-style: normal;
   font-weight: 400;
   src: url('../../public/fonts/Poppins-Regular.woff') format('woff');
@@ -24,7 +24,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: 'Poppins';
+  font-family: 'PoppinsS';
   font-style: normal;
   font-weight: 500;
   src: url('../../public/fonts/Poppins-Medium.woff') format('woff');
