--- a/components/menu/menu.module.css
+++ b/components/menu/menu.module.css
@@ -3,13 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2.1875rem;
+  gap: 1.5rem;
 }
 
 .menu__item {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 10px;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 24px;
   color: var(--white);
   border: 0.125rem solid transparent;
   transition: all 0.6s ease-in-out;
