--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,3 +1,12 @@
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  height: 100%;
+  min-width: 20rem;
+  line-height: normal;
+}
+
 body {
   position: relative;
   font-family: var(--font);
@@ -29,4 +38,8 @@ body {
   max-width: var(--max-width);
   padding: var(--padding-container);
   margin: 0 auto;
+}
+
+.none {
+	display: none !important;
 }
