--- a/components/count/count.module.css
+++ b/components/count/count.module.css
@@ -1,27 +1,24 @@
 .count {
-  width: 74px;
+  width: 102px;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f2f2f3;
-  border-radius: 8px;
-  padding: 7px 8px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
 }
 
-.minus {
-  width: 8px;
-}
-
+.minus,
 .plus {
-  width: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--accent);
+  border-radius: 50%;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 1024px) {
-  .count {
+  /* .count {
     width: 84px;
     height: 40px;
     border-radius: 12px;
@@ -40,5 +37,5 @@
 
   .plus {
     width: 10px;
-  }
+  } */
 }
